implement Puzia’s comments by Nicola

--- a/pota.tex
+++ b/pota.tex
@@ -13,8 +13,7 @@
 \setlength{\tabcolsep}{0.06in}  
  
 \title[The Fornax Cluster VLT Spectroscopic Survey]{The Fornax Cluster VLT 
-Spectroscopic Survey. I -- Compilation of the spectroscopic globular cluster catalogue in the 
-cluster core}
+Spectroscopic Survey. I -- VIMOS spectroscopy of compact stellar systems in the Fornax core region}
 
 \author[Pota et al.]{\noindent
 V. Pota$^{1}$\thanks{E-mail: vincenzo.pota@gmail.com}, 
@@ -48,7 +47,7 @@ Y. Ordenes-Brice\~no$^{8,10}$
 \\~\\
 $^1$ INAF -- Osservatorio Astronomico di Capodimonte, Salita Moiariello, 16, 80131 - Napoli, Italy\\
 $^2$ European Southern Observatory, Karl-Schwarzschild-Stra{\ss}e 2, 85748 Garching bei Munchen, Germany\\
-$^3$ INAF – Astronomical Observatory of Abruzzo, Via Maggini, 64100, Teramo, Italy\\
+$^3$ INAF â€“ Astronomical Observatory of Abruzzo, Via Maggini, 64100, Teramo, Italy\\
 $^4$ Kapteyn Astronomical Institute, University of Groningen, PO Box 800, 9700 AV Groningen, The Netherlands\\
 $^5$ Dipartimento di Fisica Ettore Pancini, Universit\`a di Napoli Federico II,via Cintia, 80126 - Napoli Italy\\
 $^6$ Harvard-Smithsonian Center for Astrophysics, 60 Garden St., Cambridge (MA), 02138, US\\
@@ -57,7 +56,7 @@ $^8$ Astronomisches Rechen-Institut Zentrum f{\"u}r Astronomie M{\"o}nchhofstra{
 $^9$ Jeremiah Horrocks Institute, University of Central Lancashire, Preston, PR1 2HE, United Kingdom\\
 $^{10}$ Pontificia Universidad Catolica de Chile, Av. Vicuna Mackenna 4860, Santiago, Chile \\
 $^{11}$ CASSACA, Camino El Observatorio 1515, Las Condes, Santiago, Chile\\
-$^{12}$ Gemini Observatory, Northern Operations Center, 670 North A’ohoku Place, Hilo, HI 96720, USA\\
+$^{12}$ Gemini Observatory, Northern Operations Center, 670 North Aâ€™ohoku Place, Hilo, HI 96720, USA\\
 $^{13}$ INFN, Sezione di Napoli, via Cintia, 80126, Napoli, Italy\\
 $^{14}$ UK Astronomy Technology Centre, Royal Observatory Edinburgh, Blackford Hill, Edinburgh, EH9 3HJ, U
 }
@@ -78,31 +77,36 @@ extragalactic globular clusters (GCs) in the core of the Fornax cluster.
 %GC candidates were selected in multi-band VST and VISTA images. 
 About 4500 low resolution spectra (from 4800 
 to 10000 \AA) were observed in 25 VLT/VIMOS masks covering the central 1 deg$^2$ 
-around the dominant galaxy NGC~1399 corresponding to $\sim$200 kpc. We describe 
+around the dominant galaxy NGC~1399 corresponding to $\sim$175 kpc galactocentric radius. 
+We describe 
 the methodology used for data reduction and data analysis. We found a total of 
 387 unique physical objects (372 GCs and 15 ultra compact dwarfs) in the field 
-covered by our observations. Most of these objects are overlapped and possibly 
-associated with NGC~1399, with only 10\% likely associated with other giant 
-galaxies. However the kinematics of the objects beyond 10 arcmin (i.e. $\sim$60 
-kpc) is consistent with the one of an unbound population and likely dominated 
-by intracluster globular clusters. The new dataset is complementary to the many 
+covered by our observations. Most of these objects are associated with NGC 1399, with only 
+10\% likely belonging to other giant galaxies. However the kinematics of the objects 
+beyond 10 arcmin (i.e. $\sim$60 kpc) is consistent with the one of an unbound population and likely dominated 
+by intracluster globular clusters. The new VIMOS dataset is complementary to the many 
 GC catalogues already present in the literature and it brings the total number 
 of tracer particles around  NGC~1399 to more than 1130 objects. This is a 
 valuable reference for the study of the galaxy cluster environment and for the 
 dynamics and kinematics of giant galaxies out to the intracluster regions 
 corresponding to about $1/4$ of the cluster virial radius, which will be mapped 
-with unprecedented details. Here we have found that the velocity dipersion of 
-the GC population (whether or not this is split in red and blue populations) 
-show the signature at around $R\sim10$ arcmin of a kinematical transition from a low 
-$v_{\rm rms}$ regime to a higher one, with the former being consistent with the 
-central velocity dispersion of NGC~1399 (the central cluster galaxy) and the 
-latter being consistent with the velocity dispersion of the cluster galaxies. 
-This demonstrates that at $R>10$ arcmin both GC populations feel strongly the cluster 
-potential, rather than the more fable galaxy potential. These kinematical 
-evidences corroborate the photometric evidence found in the deep galaxy 
-photometry of a transition radius between the bright central galaxy and the 
-outer exponential halo and show, from the dynamical point of view, the 
-emergence of an intracluster population of GCs in the Fornax Cluster.
+with unprecedented details.
+With this comprehensive radial velocity sample we have found that the velocity 
+dipersion of the GC population (equally for red and blue GC populations) shows 
+a relatively sharp increase from low velocity dispersion ($\sim\250-350$ km/s) 
+to high velocity dispersion ($\sim\!300-400$ km/s) at around $r_{\rm proj}\approx10\arcmin$ 
+($\sim\!60$\,kpc) cluster-centric distance. 
+While the inner values are consistent with the radial velocity dispersion profile 
+of NGC 1399 (the central cluster galaxy) and the outer GC velocity dispersion values 
+are consistent with the velocity dispersion of the Fornax cluster galaxy population. 
+This demonstrates that at $r_{\rm proj}\approx60$\,kpc both blue and red GC populations 
+begin to be governed by the dominating Fornax cluster potential, rather than the central 
+NGC\,1399 galaxy potential. This kinematic evidence corroborates the result found in 
+the break of the galaxy surface brightness profile which transitions at a similar radius 
+from a steeper profile of the bright central galaxy and the shallower profile of the outer 
+exponential halo. These lines of evidence show, from the dynamical point of view, 
+the emergence of an intracluster population of GCs in the Fornax galaxy cluster.
+
 
 \end{abstract}
 
@@ -119,10 +123,12 @@ The Virgo and Fornax clusters are the closest galaxy clusters, hence providing
 privileged targets where detailed observations of the galaxy and small stellar 
 system content can be performed, and galaxy formation theories can be tested. 
 
-The Fornax cluster is the most massive galaxy structure after the Virgo cluster 
+The Fornax cluster is the most massive galaxy overdensity after the Virgo cluster 
 within 20 Mpc and it is an ideal target to study the effect of the environment 
 on the structure and assembly of galaxies of any type, from the massive central 
-giant early-type systems to the dwarf galaxies. Despite its regular appearance, 
+giant early-type systems to the dwarf galaxies (e.g. \citealt{Ferguson89},  
+\citealt{munoz+15}, \citealt{Iodice+16}, \citealt{venhola+17}, 
+\citealt{Eigenthaler18}). Despite its regular appearance, 
 it has been found that the assembly of Fornax is still ongoing. 
 Although its core seems in an evolved phase \citep{Grillmair94,Jordan07} 
 and most of the bright ($m_B < $  15 mag) cluster members are 
@@ -133,6 +139,87 @@ the region inside 200 kpc, which mirrors the large scale activity, including
 the accretion of the Fornax-A (NGC~1316) subgroup (dominated by the brightest 
 cluster member, NGC~1316) into the cluster core along a 
 cosmic web filament \citep{Drinkwater00,Scharf05}.
+
+To kinematically map the complexity of the cluster core out to at least 200 kpc 
+using discrete kinematical tracers (e.g. GCs, UCDs and PNe) and finally connect the 
+large scale kinematics down to the scale of the dwarf galaxies, we have started 
+a multi-instrument observational effort called the Fornax Cluster VLT 
+Spectroscopic Survey (FVSS). As a part of this effort we have acquired integral 
+field spectroscopy of dwarfs galaxies (see \citealt{mentz+16}, Spiniello et al. 
+in preparation), a counter dispersed imaging run with FORS2 to detect and 
+measure radial velocities of planetary nebulae (Spiniello et al. 2018, 
+submitted as FVSS II) and multi-object spectroscopy of GC and UCD candidates 
+with VIMOS/VLT.
+
+The latter program is the topic of this paper, where we present the radial 
+velocity catalogue of GCs and UDGs in the core of Fornax, which is 
+complementary to archival spectroscopic GC datasets on a more limited area: 
+\citet{Schuberth} (which incorporates the catalogue of \citealt{Dirsch04}), 
+\citet{Bergond07} and other catalogues discussed throughout the 
+text. The novelty of the sample discussed in this paper is the uniform coverage 
+of the central 1 deg$^2$ of the Fornax core which allows us to provide a 
+spatially complete map of the kinematics of the galaxies in the field out to 
+the regions where they meet the intracluster field (see e.g., \citealt{napolitano03}; 
+\citealt{arnaboldi12}). Here, dynamical times are longer than the central 
+galaxy regions and we expect to find the kinematical signature of the 
+substructures already seen in the FDS photometry \citep{Iodice16} or other 
+gravitational interactions such as shells and tidal tails in the kinematics of 
+the galaxy outskirts or intracluster regions (\citealt{napolitano02,napolitano03}; 
+\citealt{murante07}; \citealt{bullock05}; \citealt{rudick06}; 
+\citealt{duc11}; \citealt{Longobardi15}). FVSS will be 
+the foundation of a multifaceted project to constrain the baryonic and dark 
+mass distribution in the core of the Fornax cluster with high precision, thus 
+shedding light on the assembly history of massive galaxies in one of the 
+nearest dense environments.
+
+In this first paper of the series, we present the radial velocity catalogue of 
+GCs. 
+%There are also planetary nebula datasets around NGC 1399 (Napolitano et al. 
+%2002, McMillan et al. 2010) and NGC 1316 (McMillan et al. 2012) that provide an 
+%extension of the stellar kinematics out to several effective radii and 
+%overlapping with the area covered by our analysis, which we will use to compare 
+%the average properties of the velocity field of the galaxy core.
+The assumed distance is 19.95 Mpc \citep{Tonry01}. Hence, $1$ arcmin $\sim 5.8$ Kpc.
+
+The paper is structured as follows: Section \ref{sec:data} describes the data 
+acquisition and reduction. The redshift estimation is discussed in Section 
+\ref{sec:zest}, results are presented in Section \ref{sec:analysis} and 
+discussed in Section \ref{sec:discussion}. We summarise the results of the paper and 
+conclude in Section \ref{sec:conclusions}. 
+
+\section{Data}
+\label{sec:data}
+
+This Section discusses all the steps undertaken to compile the spectroscopic 
+catalogue discussed in this paper. The photometric surveys that constitute the input 
+of our spectroscopic work are briefly described in \S\ref{sec:phot}. The 
+workflow consists of selecting a sample of GC candidates based on photometric 
+selection criteria (\S 
+\ref{sec:selectionGC}) and then using the derived sample to design multi-object 
+masks (\S \ref{sec:VIMOSpointings}) for follow-up 
+observations (\S \ref{sec:observations}).
+
+\begin{figure*}
+\centering
+\includegraphics[scale=0.7]{figures/fov.png} 
+\caption{Layout of the observations. The background image is a mosaic of 
+several VST/OmegaCAM pointings in the $g$-
+band. The central galaxy is NGC~1399. Additional Fornax galaxies are also 
+labeled. The red boxes mark the centers of all 
+25 VIMOS pointings. The footprints of some VIMOS masks are shown on the bottom 
+for illustrative purposes. Note how 
+the VIMOS masks are dithered to maximize spatial coverage. The region 
+covered by all 25 VIMOS is outlined in red, 
+whereas the regions covered by literature studies are shown in green 
+\citep{Bergond07} and blue \citep{Schuberth}.}.
+\label{fig:fov}
+\end{figure*}
+
+\subsection{Photometry}
+\label{sec:phot}
+
+\subsubsection{The Fornax Deep Survey}
+\label{sec:FDS}
 
 The Fornax Deep Survey\footnote{ESO programme ID (094.B-0687)} (FDS) is a joint 
 project based on Guaranteed Time Observation surveys, FOCUS (P.I. R. Peletier) 
@@ -164,87 +251,33 @@ the cluster \citep{Iodice16,venhola+17}. The same conclusion is
 backed up by the complex distribution of globular clusters in the Fornax 
 cluster \citep{DAbrusco16,cantiello+17}.
 
-To kinematically map the complexity of the cluster core out to at least 200 kpc 
-using discrete kinematical tracers (e.g. GCs, UCDs and PNe) and finally connect the 
-large scale kinematics down to the scale of the dwarf galaxies, we have started 
-a multi-instrument observational effort called the Fornax Cluster VLT 
-Spectroscopic Survey (FVSS). As a part of this effort we have acquired integral 
-field spectroscopy of dwarfs galaxies (see \citealt{mentz+16}, Spiniello et al. 
-in preparation), a counter dispersed imaging run with FORS2 to detect and 
-measure radial velocities of planetary nebulae (Spiniello et al. 2018, 
-submitted as FVSS II) and multi-object spectroscopy of GC and UCD candidates 
-with VIMOS/VLT.
+\subsubsection{Next Generation Fornax Survey}
+\label{sec:NGFS}
+The Next Generation Fornax Survey (NGFS; \citealt{munoz+05}, Puzia et al. 2018, in prep.) 
+is an optical and near-infrared imaging survey of the Fornax
+galaxy cluster virial sphere ($R_{\rm vir}\sim 1.4$ Mpc; \citealt{Drinkwater+01}). 
+NGFS uses the Dark Energy Camera (DECam; Flaugher et al. 2015) mounted on the 
+4-meter Blanco telescope at Cerro Tololo Interamerican Observatory (CTIO) in the 
+optical wavelengths and the European Southern Observatory (ESO) 3.7-meter VISTA 
+telescope with VIRCam \citep{sutherland+15} for near-infrared observations. 
+The current NGFS survey footprint covers $\sim50$ deg$^2$ with 19 DECam tiles of 2.65 
+deg$^2$ each, and detects point-sources at $S/N\ =$ 5 down to u$'$ = 26.5, g$'$ = 26.1, 
+i$'$ = 25.3, J = 24.0 and K_s = 23.4 AB mag. Here we make use of preliminary NGFS 
+$K_s$-band point source catalogs.
 
-The latter program is the topic of this paper, where we present the radial 
-velocity catalogue of GCs and UDGs in the core of Fornax, which is 
-complementary to archival spectroscopic GC datasets on a more limited area: 
-\citet{Schuberth} (which incorporates the catalogue of \citealt{Dirsch04}), 
-\citet{Bergond07} and other catalogues discussed throughout the 
-text. The novelty of the sample discussed in this paper is the uniform coverage 
-of the central 1 deg$^2$ of the Fornax core which allows us to provide a 
-spatially complete map of the kinematics of the galaxies in the field out to 
-the regions where they meet the intracluster field (see e.g., \citealt{napolitano03}
-; \citealt{arnaboldi12}). Here, dynamical times are longer than the central 
-galaxy regions and we expect to find the kinematical signature of the 
-substructures already seen in the FDS photometry \citep{Iodice16} or other 
-gravitational interactions such as shells and tidal tails in the kinematics of 
-the galaxy outskirts or intracluster regions (\citealt{napolitano02,napolitano03}; 
-\citealt{murante07}; \citealt{bullock05}; \citealt{rudick06}; 
-\citealt{duc11}; \citealt{Longobardi15}). FVSS, in synergy with FDS, will be 
-the foundation of a multifaceted project to constrain the baryonic and dark 
-mass distribution in the core of the Fornax cluster with high precision, thus 
-shedding light on the assembly history of massive galaxies in one of the 
-nearest dense environments.
-
-In this first paper of the series, we present the radial velocity catalogue of 
-GCs. 
-%There are also planetary nebula datasets around NGC 1399 (Napolitano et al. 
-%2002, McMillan et al. 2010) and NGC 1316 (McMillan et al. 2012) that provide an 
-%extension of the stellar kinematics out to several effective radii and 
-%overlapping with the area covered by our analysis, which we will use to compare 
-%the average properties of the velocity field of the galaxy core.
-The assumed distance is 19.95 Mpc \citep{Tonry01}. Hence, $1$ arcmin $\sim 5.8$ Kpc.
-
-The paper is structured as follows: Section \ref{sec:data} describes the data 
-acquisition and reduction. The redshift estimation is discussed in Section 
-\ref{sec:zest}, results are presented in Section \ref{sec:analysis} and 
-discussed in Section \ref{sec:discussion}. We summarise the results of the paper and 
-conclude in Section \ref{sec:conclusions}. 
-
-\section{Data}
-\label{sec:data}
-
-This Section discusses all the steps undertaken to compile the spectroscopic 
-catalogue discussed in this paper. The 
-workflow consists of selecting a sample of GC candidates based on photometric 
-selection criteria (\S 
-\ref{sec:selectionGC}) and then using the derived sample to design multi-object 
-masks (\S \ref{sec:VIMOSpointings}) for follow-up 
-observations (\S \ref{sec:observations}).
-
-\begin{figure*}
-\centering
-\includegraphics[scale=0.7]{figures/fov.png} 
-\caption{Layout of the observations. The background image is a mosaic of 
-several VST/OmegaCAM pointings in the $g$-
-band. The central galaxy is NGC~1399. Additional Fornax galaxies are also 
-labeled. The red boxes mark the centers of all 
-25 VIMOS pointings. The footprints of some VIMOS masks are shown on the bottom 
-for illustrative purposes. Note how 
-the VIMOS masks are intertwined to maximize spatial coverage. The region 
-covered by all 25 VIMOS is outlined in red, 
-whereas the regions covered by literature studies are shown in green 
-\citep{Bergond07} and blue \citep{Schuberth}}.
-\label{fig:fov}
-\end{figure*}
+The panchromatic NGFS data were recently used to detect low surface-brightness 
+galaxies \citep{munoz+15}, measure the morphological, scaling, and clustering 
+properties of more than 600 dwarf galaxies (\citealt{Eigenthaler18}, îrdenes-Brice–o 
+et al. 2018a, submitted), study their nucleation and stellar population properties 
+(îrdenes-Brice–o et al. 2018b, submitted, Eigenthaler et al. 2018b, submitted), 
+and analyze the globular cluster systems in Fornax (îrdenes-Brice–o et al. 2018c, submitted). 
 
 \subsection{Selection of globular cluster candidates}
 \label{sec:selectionGC}
 The selection of GC candidates was based on VST/OmegaCAM photometry in the $g$ 
-and $i$ band from the FDS survey \citep{DAbrusco16,Iodice16} and preliminary 
-VISTA/VIRCAM photometry in the $K_s$ band from the NGFS (Next 
-Generation Fornax Survey, \citealt{Munoz14}). 
-In the combined 2-colour giKs diagram, confirmed GCs from \citet{Schuberth}
+and $i$ band from the FDS \citep{DAbrusco16,Iodice16} and preliminary 
+VISTA/VIRCAM photometry in the $K_s$ band from the NGFS. 
+In the combined 2-colour $g i K_s$ diagram, confirmed GCs from \citet{Schuberth}
 are confined to a restricted colour-colour space. We defined a polygon around 
 the radial velocity members in this colour space, which serves as first order 
 selection criterion for our GC candidates. 
@@ -268,8 +301,8 @@ We note that the missing u-band information in this colour space leads to a
 high fraction of contaminating foreground stars and background galaxies (see Sect. 3.1).
 
 Here, we applied a magnitude restriction of 17.0$<i<$23.0 mag to our GC 
-candidate sample in order to avoid severe contamination by foreground stars on 
-the bright side and too low signal-to-noise spectra on the faint side. 
+candidate sample in order to avoid severe contamination by foreground stars at bright 
+magnitudes and too low signal-to-noise spectra at the faint magnitudes. 
 For the very central regions of NGC~1399, which are dominated by the galaxy 
 light, we found additional GC candidates taking advantage of the more accurate 
 photometry and morphological classification derived from {\it Hubbe Space 
@@ -281,7 +314,7 @@ background galaxies. These latter will be discussed in a separate paper.
 
 The FDS $gi$, the NGFS $K_s$, Washington $C$, as well as the central ACS  
 photometric catalogs, were matched with SExtractor photometry of point and 
-extended sources in all pre-images (ESO programme 094.B-0687(A)), which were 
+extended sources in all pre-images (ESO programme 094.B-0687), which were 
 taken in $R$-band prior to the spectroscopic observations. The x and y 
 coordinates of sources in the pre-images are needed to create VIMOS catalogs 
 for the creation of mask files with the VMMPS (VIMOS Mask Preparation 
@@ -291,18 +324,19 @@ Software, \citealt{Bottini05}) from ESO.
 \label{sec:VIMOSpointings}
 
 A total of 25 VIMOS masks were designed covering the central square degree 
-around NGC~1399. The masks were interleaved in such a way that the gaps between 
+around NGC~1399. The mask pointings were dithered in such a way that the gaps between 
 the four VIMOS CCDs (or quadrants) were covered by the adjacent mask. 
 
 In Figure \ref{fig:fov} we show the spatial distribution of the VIMOS 
 pointings, along with the footprints of archival observations in the same sky 
 region from \citet{Schuberth} and \citet{Bergond07}. It is clear that the mask 
 distribution is much more homogeneous with respect to previous studies, 
-although our target sampling varies across the field. The total covered area 
-also contains other giant galaxies, namely, NGC~1404, NGC~1387 and NGC~1380.  
+although our target sampling varies across the field. Besides the central giant 
+elliptical NGC\,1399, the total covered area contains other giant galaxies, 
+i.e., NGC~1404, NGC~1387 and NGC~1380.  
 Figure \ref{fig:2dsplit} shows how the 2-dimensional density of allocated slits 
 is considerably higher in the center with respect to the outskirts. Eight of 
-the 25 pointings were dedicated to the central 25$\times$25 arcmin to account 
+the 25 pointings were dedicated to the central 25$\times$25 arcmin$^2$ to account 
 for the higher density of GC candidates close to NGC~1399. 
 
 The use of the MR grism allows a multiplexing of two in wavelength direction 
@@ -319,7 +353,7 @@ was then filled with slits centered on GC candidates from the $(g-i)$ colour
 selection or on pre-selected background galaxies to allow ancillary science on 
 photometric redshift confirmations.
 
-In this way, we defined 4574 slits in total for the 25 pointings ranging form 
+In this way, we defined 4574 slits in total for the 25 pointings ranging from 
 157 to 202 slits per pointing (or 36 to 60 slits per quadrant). Several slits 
 were positioned in such a way to cover more than one target if they had the 
 same declination and a small distance in right ascension (of the order of 
@@ -765,13 +799,13 @@ measured systemic velocity of the Fornax objects presented in this paper
 (green points). The systemic velocity of NGC~1399 is marked with a dashed line 
 at $v = 1425$ km s$^{-1}$. The systemic velocity and galactocentric distance of 
 giant Fornax galaxies (namely NGC~1404, NGC~1387, NGC~1380) are marked with 
-the correspondent galaxy name. 
+the correspondent galaxy name.  The distance is expressed in 
+arcminutes from the centre of NGC~1399. 
+%TP: Schubert et al. give also a foreground star sample of radial velocities. You should overplot this here too. NRN: non credo che sia necessario, incasina il plot
 Physical distances in kpc are also shown on the top panel. 
 \textit{Right}: Position diagram, with North to the top and East to the left. 
 The plot shows the spatial distribution of the objects from the left panel 
-(except for Galactic stars for clarity). The distance is expressed in 
-arcminutes from the centre of NGC~1399. Physical distances in kpc are also 
-shown on the top panel.  Note how the GCs from our paper complement the GC 
+(except for Galactic stars for clarity). Note how the GCs from our paper complement the GC 
 catalogues of \citet{Schuberth} and \citet{Bergond07}. }
 \label{fig:phase-space}
 \end{figure*}
@@ -781,19 +815,23 @@ catalogues of \citet{Schuberth} and \citet{Bergond07}. }
 The phase-space diagram and the spatial distribution are shown in Figure 
 \ref{fig:phase-space}. In both cases, GCs, UCDs and Galactic stars are compared 
 to the catalogues of \citet{Bergond07} and \citet{Schuberth}. These two 
-catalogues are the largest and most homogeneous in the literature. Moreover, 
+catalogues are the largest and most homogeneous in the literature. 
+%TP: Say how many GCs each catalog contains and in what luminosity range.
+Moreover, 
 the catalogue of Schuberth is an extension of the catalogue of 
 \citet{Dirsch04}. Together they include sources within 18 arcmin from NGC~1399. 
-Bergond's catalogue was designed to target intra-cluster globular clusters and 
+Bergond et al.'s catalogue was designed to target intra-cluster globular clusters and 
 it is more radially extended (see also Figure \ref{fig:fov}). It covers a strip 
 of about 1.5 degree in right ascension and half a degree in declination. The 
-catalogues of Schuberth and Bergond combined provide a good representation of 
+catalogues of Schuberth et al. and Bergond et al. combined provide a good representation of 
 the current archival phase-space and spatial distribution of the GC system in 
 the core of the Fornax cluster. 
 
 The left panel in Figure \ref{fig:phase-space} shows that the velocity 
 distribution of GCs/UCDs is well separated from that of Galactic stars, 
-although a few GCs between $10<R<20$ arcmin might be misclassified as Galactic 
+although a few GCs between $10<R<20$ arcmin 
+%TP: Give this range also in physical units, i.e. kpc.
+might be misclassified as Galactic 
 stars. 
 
 The systemic velocity of GCs and UCDs is $v_{\rm GCs} = 1443 \pm 18 \kms$ and 
@@ -807,27 +845,32 @@ It is not trivial to disentangle the GC population of NGC~1387 and NGC~1404
 because of their proximity in phase-space to NGC~1399. 
 Here we adopt a conservative approach to extract the GC system of these 
 galaxies, but we acknowledge that more refined methodologies can return more 
-accurate results. Following \citet{Schuberth}, we use 3 arcmin from the galaxy 
+accurate results, as we will discuss in forthcoming papers.
+Following \citet{Schuberth}, we use 3 arcmin from the galaxy 
 centre as a benchmark radius to select the bulk of GCs associated with these 
-galaxies. We also require that the radial velocity of the GCs should be within 
+galaxies. We also require that the radial velocities of GCs have to be within 
 $v_{\rm sys} \pm 2\sigma$  the systemic velocity of the host galaxy, where 
 $\sigma$ is the galaxy stellar velocity dispersion. Here we used $\sigma = 247 
 \kms$  \citep{Vanderbeke11}, $v_{\rm sys} = 1947 \kms$ for NGC~1404 and $\sigma 
 = 170 \kms$ \citep{Wegner03}, $v_{\rm sys} = 1302\kms $ for NGC~1387, 
-respectively. After applying the above selection criteria, we found 17 and 8 
-GCs associated with NGC~1404 and NGC~1387, respectively. The larger number of 
+respectively. 
+%TP: Perhaps, we should use a homogeneous sample of kinematics information, e.g. from ATLAS3D. NRN: decidi, per me va anche bene cos“.
+After applying the above selection criteria, we found 17 and 8 
+GCs associated with NGC~1404 and NGC~1387, respectively. 
+%TP: Those are very small numbers. We should specify that these are confirmed targets only from the VIMOS data. Can we do the same selection with the composite radial velocity sample? How many GCs are we getting from the literature and our dataset altogether? NRN: si forse  facile da fare...ma possiamo farlo dopo la submission...
+The larger number of 
 GCs associated with NGC~1404 is due to the galaxy being more massive than 
 NGC~1387, but also to its proximity to NGC~1399 which increases the fraction of 
 contaminants.
 In the case of NGC~1380, with $\sigma = 190 \kms$  \citep{Vanderbeke11} and 
 $v_{\rm sys} = 1877 \kms$, the identification of its GC system is easier given 
 its isolated position. Using the criteria above, we found 7 GCs associated with 
-this galaxy. 
+this galaxy.
 
 The right panel of Figure \ref{fig:phase-space} displays the spatial 
 distribution of our GC and UCD catalogues. This diagram also shows how our 
 catalogue is complementary to literature catalogues: it increases the object 
-sampling in the central regions of the galaxy and it fills gaps with no data in 
+sampling in the central regions of the galaxy and it fills gaps without literature data in 
 the outer regions. 
 
 GC systems which are bound to other giant galaxies can be seen clustered around 
@@ -839,12 +882,16 @@ might also contain some GCs belonging to NGC~1379 and NGC~1381 (see Figure
 \centering
 \includegraphics[width=\columnwidth]{figures/cc.png} 
 \includegraphics[width=\columnwidth]{figures/cm.png} 
-\caption{Colour--colour and colour--magnitude diagram. The figure shows the 
+\caption{Colour--colour and colour--magnitude diagram. 
+%TP: Did you de-redden these colors? Either way, you should explicitly mention whether or not a reddening correction was applied.
+The figure shows the 
 distribution of the labelled objects in a $(g-i)$ vs. $(g-r)$ space (left 
 panel) and $(g-i)$ vs $i$ space (right panel). Each diagram includes also a 
 radial velocity $v$ axis to show the separation of GCs/UCDs from stars and 
 galaxies. The objects labelled as `all' represent all sources targeted for 
-spectroscopic follow-up and not the photometric master catalogue.}
+spectroscopic follow-up and not the photometric master catalogue.
+%TP:Say here where the radial velocities of ÒallÓ the source in the very right panel come from. The last sentence is a little unclear. I marked the yellow section which is somewhat confusing. Perhaps, you could rephrase that part more clearly.
+}
 \label{fig:cc}
 \end{figure*}
 
@@ -863,7 +910,7 @@ spectroscopic follow-up, including Galactic stars and background galaxies.
 Although the $u$ filter is known to well discriminate GCs from contaminants, 
 here we only consider $g$, $r$, $i$ magnitudes because all but one GCs/UCDs 
 have a genuine measurement in these photometric bands, whereas only 50\% of our 
-GCs/UCDs have a $u$-band measurement. This is due to $u$-band imaging being 
+GCs/UCDs have a FDS $u$-band measurement. This is due to FDS $u$-band imaging being 
 shallower than the other bands for detecting faint GCs \citep{DAbrusco16}.
 
 GCs/UCDs and contaminants are not well separated using merely $g$, $r$, $i$ 
@@ -873,7 +920,7 @@ stars and background galaxies. This is also shown in Figure \ref{fig:cc}
 dispersion of blue GCs with $(g-i) \le 0.85$ is higher than that of the red GCs, a 
 property shared with GC systems in the most giant galaxies \citep[e.g.,][]{Pota13}. 
 The rightmost panel, with $v$ vs $i$, shows that 
-the velocity distribution of all GCs is skewed towards lower velocities (a 
+the velocity distribution of all GCs has an extended tail towards lower velocities (a 
 property also visible in Figure \ref{fig:phase-space}). This effect was already 
 noticed in \citet{Schuberth}. The convincing separation between GCs and stars 
 also ensures that this property is unlikely due to miss-classified GCs. 
@@ -899,13 +946,13 @@ The root-mean-square velocity $v_{\rm rms}$ quantifies the total kinetic energy
 of a stellar system. It accounts both for the ordered and for the random 
 stellar motions. Here we compute the root-mean-square velocity as:
 \begin{equation}
-v_{\rm rms}^2 = \frac{1}{N}  \sum (v_i - v_{\rm sys})^2 - (\Delta v_i)^2 .
+v_{\rm rms}^2 = \frac{1}{N}  \sum (v_i - v_{\rm sys})^2 - (\Delta v_i)^2 ,
 \label{eq:sigma}
 \end{equation}
 where $v_i$ is the radial velocity of the i-th GC and $\Delta v_i$ is its 
 uncertainty. $v_{\rm sys}=1425 \kms$ is the systemic velocity of NGC~1399. 
 Uncertainties were derived with the formulae provided by \citet{Danese}. 
-The statistical error discussed in Section \ref{sec:analysis}.
+Statistical errors are discussed in Section \ref{sec:analysis}.
 
 The $v_{\rm rms}$ has been calculated using a total of 1133 unresolved objects 
 (including GCs and UCDs). Although we cannot exclude that GCs and UCDs are 
@@ -1078,7 +1125,7 @@ population of GCs (as well as PNe) in the Fornax Cluster.
 
 \section*{Acknowledgments}
 
-NRN and EI acknowledge financial support from the European Union’s Horizon
+NRN and EI acknowledge financial support from the European Unionâ€™s Horizon
 2020 research and innovation programme under the Marie Sk\l{}odowska-Curie
 grant agreement No 721463 to the SUNDIAL ITN network and  PRIN INAF 2014 
 ``Fornax Cluster Imaging and Spectroscopic Deep Survey''.
@@ -1094,7 +1141,7 @@ P.E. acknowledges support from the Chinese Academy of Sciences (CAS)
 through CAS-CONICYT Postdoctoral  Fellowship CAS150023 administered 
 by the CAS South America Center for Astronomy (CASSACA) in Santiago,  Chile.
 MS acknowledge finacial support from the VST project (P.I. P. Schipani).
-The authors acknowledge financial support from the European Union’s 
+The authors acknowledge financial support from the European Unionâ€™s 
 Horizon 2020 research and innovation programme under Marie Sk\l{}odowska-Curie 
 grant agreement No 721463 to the SUNDIAL ITN network.
 GvdV acknowledges funding from the European Research Council (ERC) under 
